# monster-django

./: README.md  manage.py  pyproject.toml  requirements.txt
blog/: views.py
blog/migrations/: 0001_initial.py
home/: views.py
monster_env/: pyvenv.cfg
monster_env/Scripts/: activate  activate.bat
monstersite/: asgi.py  settings.py  urls.py  wsgi.py
project/: settings.py  urls.py
src/base/global/: base.html
src/base/global/partials/: _head.html  _menu.html  _posts.html
src/base/static/global/css/: style.css
src/blog/: urls.py  views.py
src/blog/templates/blog/: example.html  index.html  post.html
src/home/: urls.py  views.py
src/home/templates/home/: index.html
src/project/: settings.py  urls.py
